changed basic theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Abhik Ghosh | Work
-description: This slice if internet contains my collection of work and projects.
+title: Abhik Ghosh
+description: Data Solution Architect
 show_downloads: false
 show_downloads_button: false
 google_analytics:
