--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Abhik Ghosh
-description: Data Solution Architect
+description: Data Solution Architect | Helping Businesses Make Data-Driven Decisions
 show_downloads: false
 show_downloads_button: false
 google_analytics:
