--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ show_downloads_button: false
 google_analytics:
 theme: jekyll-theme-slate
 
-include: ['assests/css/custom.css']
+include: ['custom.css']  
